--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\22\\tomcat110.properties
-file.reference.jBCrypt-0.4.1.jar=C:\\Users\\ASUS\\Downloads\\jBCrypt-0.4.1.jar
-file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\ASUS\\Downloads\\mysql-connector-java-8.0.27.jar
+deploy.ant.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\23\\tomcat110.properties
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-java-8.0.27.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 11.0
 j2ee.server.instance=tomcat110:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 11.0
-user.properties.file=C:\\Users\\Zaqie\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\23\\build.properties
