--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,8 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.jBCrypt-0.4.1.jar=C:\\Users\\Administrator\\Downloads\\jBCrypt-0.4.1.jar
 file.reference.mysql-connector-java-8.0.27.jar=../../../Downloads/mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-1=C:\\Users\\Administrator\\Downloads\\mysql-connector-java-8.0.27.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +38,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${file.reference.jBCrypt-0.4.1.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
