--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\23\\tomcat110.properties
-file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Administrator\\Downloads\\mysql-connector-java-8.0.27.jar
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 11.0
-j2ee.server.instance=tomcat110:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 11.0
-user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\23\\build.properties
+deploy.ant.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\23\\tomcat110.properties
+j2ee.server.home=C:/Users/ASUS/Downloads/apache-tomcat-11.0.1/apache-tomcat-11.0.1
+j2ee.server.instance=tomcat110:home=C:\\Users\\ASUS\\Downloads\\apache-tomcat-11.0.1\\apache-tomcat-11.0.1
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\ASUS\\Downloads\\mysql-connector-java-8.0.27.jar
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/FirefoxBrowser
+# user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\23\\build.properties
